# R-Type

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JY_map.json  LICENSE  README.md  build.bat  build.sh  conanfile.txt  config.json  imgui.ini  vcpkg.json
.github/workflows/: build.yml  deploy.yml  mirror.yml
assets/Data/: config.json
assets/scripts/: example.lua
assets/scripts/client/: player.lua
docs/Uml/: Uml.xmi
docs/Uml/html-docs/contents/: element_index.html  navigation.html
docs/docusaurus/: docusaurus.config.js  package-lock.json  package.json
docs/docusaurus/docs/: get-started.md
docs/docusaurus/docs/Accessibility/: Accessibility.md
docs/docusaurus/docs/Client/: ClientOverview.md  Get Started.md  Player Documentation.md
docs/docusaurus/docs/Client/Architecture/: directory-structure.md  ecs-implementation.mdx
docs/docusaurus/docs/Client/Event/: EventPool.md  eventPool.md
docs/docusaurus/docs/Client/For Developers/Introduction/: project-overview.md
docs/docusaurus/docs/Client/Introduction/: project-objectives.md
docs/docusaurus/docs/Client/Update the project/: using-ecs.md
docs/docusaurus/docs/Event/: UserEvent.md  UserEventFactory.md  UserEventPool.md  event.md  eventFactory.md
docs/docusaurus/docs/Game/: Accessibility.md  Network.md
docs/docusaurus/docs/Game Engine/: Assets Manager.md  Command Line Interface.md  How to use.md
docs/docusaurus/docs/Game Engine/GUI/: Text.md
docs/docusaurus/docs/Game Engine/Physic/: Physic.md
docs/docusaurus/docs/Game/Client/: Get Started.md
docs/docusaurus/docs/Game/Client/Architecture/: directory-structure.md  technologies-used.md
docs/docusaurus/docs/Game/Client/Event/: Event.md  EventFactory.md
docs/docusaurus/docs/Game/Client/Update the project/: using-ecs.md
docs/docusaurus/docs/Game/Server/: Introduction.md  Networking.md
docs/docusaurus/docs/GameEngine/GUI/: Button.md  Scenes.md
docs/docusaurus/docs/Map Editor/: get-started.md  map-file-format.md  usage.md
docs/docusaurus/docs/Network/: Developer Documentation.md  Game Datagram Transfer Protocol.md  Network.md  NetworkProtocol.md  User Documentation.md  UserNetwork.md  networkService.md
docs/docusaurus/docs/Overview/: Architecture.md  GettingStarted.md  Glossary.md  get-started.md
docs/docusaurus/docs/Overview/Installation/: From Source.md  Windows.md  _category_.json
docs/docusaurus/docs/User/: Game Documentation.md  Server Documentation.md
docs/docusaurus/docs/installation/: from_source.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/src/: main.cpp
src/client/src/Game/: Components.hpp  EntityFactory.cpp  EntityFactory.hpp  Game.cpp  Game.hpp  GameSystems.cpp  Globals.cpp  Globals.hpp  Map.cpp  Menus.cpp  Menus.hpp  MusicManager.hpp  Scenes.cpp  Scenes.hpp  Systems.cpp  Systems.hpp
src/client/src/Game/Configuration/: ConfigManager.cpp  ConfigManager.hpp
src/client/src/Game/Utils/: ClientComponents.hpp  GetViewBounds.cpp
src/client/src/event/: Event.cpp  Event.hpp  EventFactory.cpp  EventFactory.hpp  EventPool.cpp  EventPool.hpp
src/core/config/: ConfigManager.hpp
src/core/ecs/Entity/: Entity.hpp
src/core/ecs/GameEngine/: AssetManager.hpp  GameEngine.hpp  GameEngineComponents.hpp  MusicManager.hpp  Shell.hpp  UIComponents.hpp
src/core/ecs/Registry/: Registry.cpp  Registry.hpp
src/core/ecs/SparseArray/: SparseArray.cpp  SparseArray.hpp
src/core/network/: NetworkService.hpp
src/core/network/event/: Event.hpp  EventFactory.hpp  EventPool.hpp
src/core/network/includes/: EventTypeMapping.hpp  InvalidEventConversion.hpp  RequestHeader.hpp  RequestType.hpp
src/editor/: CMakeLists.txt  map_format_exemple.json
src/editor/src/: Exceptions.hpp  main.cpp
src/editor/src/Enemy/: Enemy.cpp  Enemy.hpp
src/editor/src/Entity/: Entity.cpp  Entity.hpp
src/editor/src/EventManager/: EventManager.cpp  EventManager.hpp
src/editor/src/Grid/: Grid.cpp  Grid.hpp
src/editor/src/Gui/MainMenuBar/: MainMenuBar.cpp  MainMenuBar.hpp
src/editor/src/Gui/MapPropertiesPanel/: MapPropertiesPanel.cpp  MapPropertiesPanel.hpp
src/editor/src/Gui/ObjectSelector/: ObjectSelector.cpp  ObjectSelector.hpp
src/editor/src/Gui/TileInfo/: TileInfoPanel.cpp  TileInfoPanel.hpp
src/editor/src/Gui/ToolPanel/: ToolPanel.cpp  ToolPanel.hpp
src/editor/src/Map/: Map.cpp  Map.hpp
src/editor/src/SpawnPoint/: SpawnPoint.cpp  SpawnPoint.hpp
src/editor/src/Tile/: Tile.cpp  Tile.hpp
src/editor/src/TileSet/: TileSet.cpp  TileSet.hpp
src/editor/src/Window/: Window.cpp  Window.hpp
src/game/: CollisionMask.hpp  Components.hpp  HandlersReceive.hpp  MessageType.hpp  PacketType.hpp  Player.hpp  PreparePayload.hpp  RequestType.hpp  World.hpp
src/pong/: CMakeLists.txt
src/pong/src/: main.cpp
src/server/: CMakeLists.txt
src/server/src/: Server.cpp  Server.hpp  ServerPlayer.cpp  ServerPlayer.hpp  ServerWorld.cpp  ServerWorld.hpp  main.cpp
src/server/src/Server/: Components.hpp  EntityFactory.cpp  EntityFactory.hpp  EventFactory.cpp  EventFactory.hpp  Map.cpp  Map.hpp  MapFactory.cpp  MapFactory.hpp  Server.cpp  Server.hpp  Systems.cpp  Systems.hpp
src/server/src/Shell/: Shell.cpp  Shell.hpp
